--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
     <script src="js/script.js" type="module"></script>
     <script src="js/clock.js" type="module"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--dit toegevoegd voor 4k scherm -->
 <!--    <script src='//unpkg.com/swagger-client' type='text/javascript'></script>-->
 
     <link href="styles.css" rel="stylesheet">
