--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     <div style="display:none;" class="flex padding-standard content-background"  id="absences-container">
         Afwezig:<div class="flex"></div>
 
+    <!--onderstaande alinea is voor afwezige docenten -->
+    </div>
+    <div style="display:none;" class="flex padding-standard content-background"  id="outofoffice-container">
+    <div>Activiteiten:</div><div id="outofoffice-inner-container"></div>
+
     </div>
     <div class="flex flex-fill" id="content-container">
     </div>
